--- a/kontak.html
+++ b/kontak.html
@@ -21,40 +21,40 @@
 </head>
 <body>
     <!-- Start Logo -->
-    <div class="container bg-purple logo">
-    <a href="index.html" title="Radha Krishna">
-        <img src="images/logo-rk.jpg" alt="Logo Radha Krishna" width="150">
-    </a>
-    </div>
-        <!-- End Logo -->
- 
-    <!-- Start Menu Primer -->  
-    <div class="container menu-primer bg-rgb">
-        <ul>
-            <li>
-                <a href="index.html" title="Beranda">Beranda</a>
-            </li>
-            <li>
-                <a href="tentang.html" title="Tentang Kami">Tentang Kami</a>
-            </li>
-            <li>
-                <a href="produk.html" title="Produk">Produk</a>
-            </li>
-            <li>
-                <a href="artikel.html" title="Artikel">Artikel</a>
-            </li>
-            <li>
-                <a href="pembayaran.html" title="Cara Pembayaran">Cara Pembayaran</a>
-            </li>
-            <li>
-                <a href="pertanyaan.html" title="Pertanyaan">Pertanyaan</a>
-            </li>
-            <li>
-                <a href="kontak.html" title="Kontak Kami">Kontak Kami</a>
-            </li>
-        </ul>
-    </div>
-    <!-- End Menu Primer -->
+    <div class="container logo">
+        <a href="index.html" title="Radha Krishna">
+            <img src="images/logo-rk.jpg" alt="Logo Radha Krishna" width="150">
+        </a>
+        </div>
+            <!-- End Logo -->
+        
+        <!-- Start Menu Primer -->  
+        <div class="container menu-primer bg-rgb">
+            <ul>
+                <li>
+                    <a href="index.html" title="Beranda">Beranda</a>
+                </li>
+                <li>
+                    <a href="tentang.html" title="Tentang Kami">Tentang Kami</a>
+                </li>
+                <li>
+                    <a href="produk.html" title="Produk">Produk</a>
+                </li>
+                <li>
+                    <a href="artikel.html" title="Artikel">Artikel</a>
+                </li>
+                <li>
+                    <a href="pembayaran.html" title="Cara Pembayaran">Cara Pembayaran</a>
+                </li>
+                <li>
+                    <a href="pertanyaan.html" title="Pertanyaan">Pertanyaan</a>
+                </li>
+                <li>
+                    <a href="kontak.html" title="Kontak Kami">Kontak Kami</a>
+                </li>
+            </ul>
+        </div>
+        <!-- End Menu Primer -->
 
     <!-- Start Effect -->
     <div class="container">
@@ -68,7 +68,7 @@
     <!-- End Effect -->
 
     <!-- Start Jumbroton -->
-    <div class="Container">
+    <div class="container">
         <!-- Start Alamat -->
         <h2>Alamat Radha Krishna</h2>
         <p>Anda bisa pesan dan konfirmasi pembayaran melalui WA atau Email dibawah ini :</p>
@@ -82,8 +82,9 @@
         <h2>Form Kontak Radha Krishna</h2>
         <p>Anda bisa pesan dan konfirmasi pembayaran melalui Form di bawah ini:</p>
 
-        <form action="">
-            <label for="nama">Nama lengkap</label>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfl1pmvS1yQetnpZ4iIp2gG4FTllDEcaITv84Dx_vTdozPpFA/viewform?embedded=true" width="640" height="1885" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <!-- <form action="https://formspree.io/mleryrzj" method="POST"> -->
+            <!-- <label for="nama">Nama lengkap</label>
             <br>
             <input type="text" placeholder="Nama Lengkap" size="50" name="nama" id="nama">
             
@@ -106,72 +107,48 @@
             <textarea id="pesan" cols="46" rows="10" placeholder="Tulis pesan disini"></textarea>
             <br>
             <input type="submit" name="kirim" id="kirim" size="50" value="Kirim">
-        </form>
+        </form>  
     </div>
     <!-- End Jumbroton -->
 
 
     <!-- Start Menu Sekunder -->
     <div class="container-full bg-rgb">
-    <div class="container">
-    <h4>Dupa Harum RK</h4>
-    <p>Dupa Harum RK menyediakan produk dupa harum yang terjangkau dan berkualitas.</p>
-    <p>Email: <a href="mailto:admin@dupaharum.com" title="admin@dupaharum.com">admin@dupaharum.com</a></p>
-    <p>WA: <a href="tel:+62-8123-814046" title="+62-8123-814046">+62-8123-814046</a></p>
+        <div class="container col-30">
+            <h2>Dupa Harum RK</h2 >
+            <p>Dupa Harum RK menyediakan produk dupa harum yang terjangkau dan berkualitas.</p>
+            <p>Email: <a href="mailto:admin@dupaharum.com" title="admin@dupaharum.com">admin@dupaharum.com</a></p>
+            <p>WA: <a href="tel:+62-8123-814046" title="+62-8123-814046">+62-8123-814046</a></p>
 
-    <h4>Menu</h4>
-    <ul>
-        <li>
-            <a href="index.html" title="Beranda">Beranda</a>
-        </li>
-        <li>
-            <a href="tentang.html" title="Tentang Kami">Tentang Kami</a>
-        </li>
-        <li>
-            <a href="produk.html" title="Produk">Poduk</a>
-        </li>
-        <li>
-            <a href="artikel.html" title="Artikel">Artikel</a>
-        </li>
-        <li>
-            <a href="pembayaran.html" title="Cara Pembayaran">Cara Pembayaran</a>
-        </li>
-        <li>
-            <a href="pertanyaan.html" title="Pertanyaan">Pertanyaan</a>
-        </li>
-        <li>
-            <a href="kontak.html" title="Kontak Kami">Kontak Kami</a>
-        </li>
-    </ul>
+        </div>
+        <div class="container col-30">
+            <h2>Media Sosial</h2>
+            <ul>
+                <li>
+                    <a href="https://facebook.com/" title="Facebook - Dupa Harum RK">
+                        <img src="images/logo-facebook.png" width="30" alt="Logo Facebook">
+                        Facebook - Dupa Harum RK
+                    </a>
+                </li>
+                <li>
+                    <a href="https://instagram.com/" title="Instagram - Dupa Harum RK">
+                        <img src="images/logo-instagram.jpg" width="30" alt="Logo Instagram">
+                        Instagram - Dupa Harum RK
+                    </a>
+                <li>
+                    <a href="https://twitter.com/" title="Twitter - Dupa Harum RK">
+                        <img src="images/logo-twitter.png" width="30" alt="Logo Twitter">
+                        Twitter - Dupa Harum RK
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <!-- End Menu Sekunder -->
     </div>
-    <h4>Media Sosial</h4>
-    <div class="container">
-    <ul>
-        <li>
-            <a href="https://facebook.com/" title="Facebook - Dupa Harum RK">
-                <img src="images/logo-facebook.png" width="30" alt="Logo Facebook">
-                Facebook - Dupa Harum RK
-            </a>
-        </li>
-        <li>
-            <a href="https://instagram.com/" title="Instagram - Dupa Harum RK">
-                <img src="images/logo-instagram.jpg" width="30" alt="Logo Instagram">
-                Instagram - Dupa Harum RK
-            </a>
-        <li>
-            <a href="https://twitter.com/" title="Twitter - Dupa Harum RK">
-                <img src="images/logo-twitter.png" width="30" alt="Logo Twitter">
-                Twitter - Dupa Harum RK
-            </a>
-        </li>
-    </ul>
-    </div>
-    <!-- End Menu Sekunder -->
-
     <!-- Start Copyright -->
     <div class="container">
-    <p>Copyright &copy; 2019 - Radha Krishna</p>
+        <p>Copyright &copy; 2019 - Radha Krishna</p>
     </div>
     <!-- End Copyright -->
 </body>
-</html>
+</html>                                                                                                                                                                                 
