--- a/pembayaran.html
+++ b/pembayaran.html
@@ -18,99 +18,86 @@
     <!-- End CSS -->
 </head>
 <body>
-    <h1>Selamat Datang</h1>
     <!-- Start Logo -->
-    <a href="index.html" title="Coding Design"
-        <img src="images/logo-coding-design.jpg" alt="Logo Coding Design" width="100">
-    </a>
-        <!-- End Logo -->
+    <div class="container logo">
+        <a href="index.html" title="Radha Krishna">
+            <img src="images/logo-rk.jpg" alt="Logo Radha Krishna" width="150">
+        </a>
+        </div>
+            <!-- End Logo -->
+        
+        <!-- Start Menu Primer -->  
+        <div class="container menu-primer bg-rgb">
+            <ul>
+                <li>
+                    <a href="index.html" title="Beranda">Beranda</a>
+                </li>
+                <li>
+                    <a href="tentang.html" title="Tentang Kami">Tentang Kami</a>
+                </li>
+                <li>
+                    <a href="produk.html" title="Produk">Produk</a>
+                </li>
+                <li>
+                    <a href="artikel.html" title="Artikel">Artikel</a>
+                </li>
+                <li>
+                    <a href="pembayaran.html" title="Cara Pembayaran">Cara Pembayaran</a>
+                </li>
+                <li>
+                    <a href="pertanyaan.html" title="Pertanyaan">Pertanyaan</a>
+                </li>
+                <li>
+                    <a href="kontak.html" title="Kontak Kami">Kontak Kami</a>
+                </li>
+            </ul>
+        </div>
+        <!-- End Menu Primer -->
 
-    <!-- Start Menu Primer -->    
-    <ul>
-        <li>
-            <a href="index.html" title="Beranda">Beranda</a>
-        </li>
-        <li>
-            <a href="Tentang.html" title="Tentang Kami">Tentang Kami</a>
-        </li>
-        <li>
-            <a href="Layanan" title="Layanan">Layanan</a>
-        </li>
-        <li>
-            <a href="Artikel" title="Artikel">Artikel</a>
-        </li>
-        <li>
-            <a href="Cara Pembayaran" title="Cara Pembayaran">Cara Pembayaran</a>
-        </li>
-        <li>
-            <a href="Pertanyaan" title="Pertanyaan">Pertanyaan</a>
-        </li>
-        <li>
-            <a href="Kontak" title="Kontak Kami">Kontak Kami</a>
-        </li>
-    </ul>
-    <!-- End Menu Primer -->
-
-    <!-- Start Jumbroton -->
-    <h1>Cara Pembayaran Coding Design</h1>
-    <h3>Coding Design menyediakan layanan yang terjangkau dan berkualitas</h3>
-    <!-- End Jumbroton -->
+    <div class="container">
+        <!-- Start Jumbroton -->
+        <h1>Cara Pembayaran Coding Design</h1>
+        <h3>Coding Design menyediakan layanan yang terjangkau dan berkualitas</h3>
+        <!-- End Jumbroton -->
+    </div>
 
     <!-- Start Menu Sekunder -->
-    <h4>Coding Design</h4>
-    <p>Coding Design menyediakan layanan yang terjangkau dan berkualitas.</p>
-    <p>Email: <a href="mailto:admin@codingdesign.com" title="admin@codingdesign.com">admin@codingdesign.com</a></p>
-    <p>WA: <a href="tel:+62-8123-814046" title="+62-8123-814046">+62-8123-814046</a></p>
+    <div class="container-full bg-rgb">
+        <div class="container col-30">
+            <h2>Dupa Harum RK</h2 >
+            <p>Dupa Harum RK menyediakan produk dupa harum yang terjangkau dan berkualitas.</p>
+            <p>Email: <a href="mailto:admin@dupaharum.com" title="admin@dupaharum.com">admin@dupaharum.com</a></p>
+            <p>WA: <a href="tel:+62-8123-814046" title="+62-8123-814046">+62-8123-814046</a></p>
 
-    <h4>Menu</h4>
-    <ul>
-        <li>
-            <a href="index.html" title="Beranda">Beranda</a>
-        </li>
-        <li>
-            <a href="Tentang.html" title="Tentang Kami">Tentang Kami</a>
-        </li>
-        <li>
-            <a href="Layanan" title="Layanan">Layanan</a>
-        </li>
-        <li>
-            <a href="Artikel" title="Artikel">Artikel</a>
-        </li>
-        <li>
-            <a href="Cara Pembayaran" title="Cara Pembayaran">Cara Pembayaran</a>
-        </li>
-        <li>
-            <a href="Pertanyaan" title="Pertanyaan">Pertanyaan</a>
-        </li>
-        <li>
-            <a href="Kontak" title="Kontak Kami">Kontak Kami</a>
-        </li>
-    </ul>
-
-    <h4>Media Sosial</h4>
-    <ul>
-        <li>
-            <a href="https://facebook.com/" title="Facebook - Coding Design">
-                <img src="images/logo-facebook.png" width="30" alt="Logo Facebook">
-                Facebook - Coding Design
-            </a>
-        </li>
-        <li>
-            <a href="https://instagram.com/" title="Instagram - Coding Design">
-                <img src="images/logo-instagram.jpg" width="30" alt="Logo Instagram">
-                Instagram - Coding Design
-            </a>
-        <li>
-            <a href="https://twitter.com/" title="Twitter - Coding Design">
-                <img src="images/logo-twitter.png" width="30" alt="Logo Twitter">
-                Twitter - Coding Design
-                </a
-        </li>
-    </ul>
-    <!-- End Menu Sekunder -->
-
+        </div>
+        <div class="container col-30">
+            <h2>Media Sosial</h2>
+            <ul>
+                <li>
+                    <a href="https://facebook.com/" title="Facebook - Dupa Harum RK">
+                        <img src="images/logo-facebook.png" width="30" alt="Logo Facebook">
+                        Facebook - Dupa Harum RK
+                    </a>
+                </li>
+                <li>
+                    <a href="https://instagram.com/" title="Instagram - Dupa Harum RK">
+                        <img src="images/logo-instagram.jpg" width="30" alt="Logo Instagram">
+                        Instagram - Dupa Harum RK
+                    </a>
+                <li>
+                    <a href="https://twitter.com/" title="Twitter - Dupa Harum RK">
+                        <img src="images/logo-twitter.png" width="30" alt="Logo Twitter">
+                        Twitter - Dupa Harum RK
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <!-- End Menu Sekunder -->
+    </div>
     <!-- Start Copyright -->
-    <p>Copyright & Copy: 2019 - Coding Design</p>
+    <div class="container">
+        <p>Copyright &copy; 2019 - Radha Krishna</p>
+    </div>
     <!-- End Copyright -->
 </body>
 </html>
