--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <!-- Start Logo -->
-    <div class="container bg-purple logo">
+    <div class="container logo">
     <a href="index.html" title="Radha Krishna">
         <img src="images/logo-rk.jpg" alt="Logo Radha Krishna" width="150">
     </a>
@@ -68,14 +68,54 @@
     <!-- End Effect -->
 
     <!-- Start Jumbroton -->
-    <div class="Container">
-    <h1>Selamat Datang di Dupa Radha Krishna</h1>
-    <h3>Dupa Harum Radha Krishna menyediakan dupa harum berkualitas dengan harga terjangkau</h3>
+    <div class="container jumbroton">
+        <h1>Selamat Datang di Dupa Radha Krishna</h1>
+        <h3>Dupa Harum Radha Krishna menyediakan dupa harum berkualitas dengan harga terjangkau</h3>
     </div>
     <!-- End Jumbroton -->
 
+    <!-- Start Foto -->
+    <div class="container">
+        <figure class="snip1585">
+            <img src="images/dupa-bambu-a.jpg" width="230" alt="sample70" />
+            <figcaption>
+                <h3>Dupa Bambu</h3>
+            </figcaption>
+            <a href="#"></a>
+        </figure>
+        <figure class="snip1585">
+            <img src="images/dupa-bambu-a.jpg" width="230" alt="sample70" />
+            <figcaption>
+                <h3>Dupa Bambu</h3>
+            </figcaption>
+            <a href="#"></a>
+        </figure>
+        <figure class="snip1585">
+            <img src="images/dupa-bambu-a.jpg" width="230" alt="sample70" />
+            <figcaption>
+                <h3>Dupa Bambu</h3>
+            </figcaption>
+            <a href="#"></a>
+        </figure>
+        <figure class="snip1585">
+            <img src="images/dupa-bambu-a.jpg" width="230" alt="sample70" />
+            <figcaption>
+                <h3>Dupa Bambu</h3>
+            </figcaption>
+            <a href="#"></a>
+        </figure>
+        <figure class="snip1585">
+            <img src="images/dupa-bambu-a.jpg" width="230" alt="sample70" />
+            <figcaption>
+                <h3>Dupa Bambu</h3>
+            </figcaption>
+            <a href="#"></a>
+        </figure>
+    </div>
+    <!-- End Foto -->
+
     <!-- Start Promo & Produk -->
-    "><div class="Container
+    <div class="container">
         <!-- Start Promo -->
         <div class="main-home-one">
             <div class="box-heading">
@@ -101,13 +141,13 @@
                     <a href="produk.html" title="Paket Silver">Paket Silver</a>
                 </li>
                 <li>
-                    <a href="produk.html" title="Paket Gold">Paket Gold</a>                    </li>
+                    <a href="produk.html" title="Paket Gold">Paket Gold</a>
                 </li>
                 <li>
                     <a href="produk.html" title="Paket Diamond">Paket Diamond</a>
                 </li>
                 <li>
-                    <a href="produk.html" title="Paket Combo">Paket Combo</a>                     </li>
+                    <a href="produk.html" title="Paket Combo">Paket Combo</a>
                 </li>
             </ul>
             </div>
@@ -118,94 +158,81 @@
 
     <!-- Start Artikel & Testimonial -->
     <div class="container">
-    <h4>Artikel</h4>
-    <ol>                                                          
-        <li>
-            <a href="" title="Cara mudah, murah membuat website">Cara mudah, murah membuat website</a>
-        </li>
-        <li>
-            <a href="" title="Cara membuat website yang UI-nya cantik dan UX-nya baik">Cara membuat website yang UI-nya cantik dan UX-nya baik</a> 
-        </li>
-        <li>
-            <a href="" title="Tips dan trik menarik pengunjung">Tips dan trik menarik pengunjung</a>
-        </li>
-    </ol>    
-    </div>  
-    <!-- End Artikel -->
-
-    <!-- Start Testimonial -->
-    <div class="container">
-    <h4>Testimonial</h4>
-    <blockquote>
-        <p>
-            <em>Awalnya saya skeptis memakai jasa Coding Design, ternyata hasilnya sangat berkualitas. Saya puas!</em>
-        </p>
-        <cite>-- Klien</cite>
-    </blockquote>
+        <!-- Start Artikel -->
+        <div class="main-home-one">
+                <div class="box-heading">
+                    <h4>Artikel</h4>
+                </div>
+                <div class="box-isi">
+                    <ol>                                                          
+                        <li>
+                            <a href="artikel.html" title="Cara mudah, murah membuat website">Cara mudah, murah membuat website</a>
+                        </li>
+                        <li>
+                            <a href="artikel.html" title="Cara membuat website yang UI-nya cantik dan UX-nya baik">Cara membuat website yang UI-nya cantik dan UX-nya baik</a> 
+                        </li>
+                        <li>
+                            <a href="artikel.html" title="Tips dan trik menarik pengunjung">Tips dan trik menarik pengunjung</a>
+                        </li>
+                    </ol>    
+        <!-- End Artikel -->
+                </div>
+        </div>
+        <!-- Start Testimonial -->
+        <div class="main-home-two">
+                <div class="box-heading">
+                    <h4>Testimonial</h4>
+                </div>
+                <div class="box-isi">
+                    <blockquote>
+                        <p>                                                                     
+                            <em>Awalnya saya skeptis memakai jasa Coding Design, ternyata hasilnya sangat berkualitas. Saya puas!</em>
+                        </p>                                                                        
+                    <cite>-- Klien</cite>
+                </blockquote>
+            </div>
+        </div>
+        <!-- End Testimonial -->                                                                                                         
+    <!-- End Artikel & Testimonial -->
     </div>
-    <!-- End Testimonial -->
 
 
     <!-- Start Menu Sekunder -->
     <div class="container-full bg-rgb">
-    <div class="container">
-    <h4>Dupa Harum RK</h4>
-    <p>Dupa Harum RK menyediakan produk dupa harum yang terjangkau dan berkualitas.</p>
-    <p>Email: <a href="mailto:admin@dupaharum.com" title="admin@dupaharum.com">admin@dupaharum.com</a></p>
-    <p>WA: <a href="tel:+62-8123-814046" title="+62-8123-814046">+62-8123-814046</a></p>
+        <div class="container col-30">
+            <h2>Dupa Harum RK</h2 >
+            <p>Dupa Harum RK menyediakan produk dupa harum yang terjangkau dan berkualitas.</p>
+            <p>Email: <a href="mailto:admin@dupaharum.com" title="admin@dupaharum.com">admin@dupaharum.com</a></p>
+            <p>WA: <a href="tel:+62-8123-814046" title="+62-8123-814046">+62-8123-814046</a></p>
 
-    <h4>Menu</h4>
-    <ul>
-        <li>
-            <a href="index.html" title="Beranda">Beranda</a>
-        </li>
-        <li>
-            <a href="tentang.html" title="Tentang Kami">Tentang Kami</a>
-        </li>
-        <li>
-            <a href="produk.html" title="Produk">Poduk</a>
-        </li>
-        <li>
-            <a href="artikel.html" title="Artikel">Artikel</a>
-        </li>
-        <li>
-            <a href="pembayaran.html" title="Cara Pembayaran">Cara Pembayaran</a>
-        </li>
-        <li>
-            <a href="pertanyaan.html" title="Pertanyaan">Pertanyaan</a>
-        </li>
-        <li>
-            <a href="kontak.html" title="Kontak Kami">Kontak Kami</a>
-        </li>
-    </ul>
+        </div>
+        <div class="container col-30">
+            <h2>Media Sosial</h2>
+            <ul>
+                <li>
+                    <a href="https://facebook.com/" title="Facebook - Dupa Harum RK">
+                        <img src="images/logo-facebook.png" width="30" alt="Logo Facebook">
+                        Facebook - Dupa Harum RK
+                    </a>
+                </li>
+                <li>
+                    <a href="https://instagram.com/" title="Instagram - Dupa Harum RK">
+                        <img src="images/logo-instagram.jpg" width="30" alt="Logo Instagram">
+                        Instagram - Dupa Harum RK
+                    </a>
+                <li>
+                    <a href="https://twitter.com/" title="Twitter - Dupa Harum RK">
+                        <img src="images/logo-twitter.png" width="30" alt="Logo Twitter">
+                        Twitter - Dupa Harum RK
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <!-- End Menu Sekunder -->
     </div>
-    <h4>Media Sosial</h4>
-    <div class="container">
-    <ul>
-        <li>
-            <a href="https://facebook.com/" title="Facebook - Dupa Harum RK">
-                <img src="images/logo-facebook.png" width="30" alt="Logo Facebook">
-                Facebook - Dupa Harum RK
-            </a>
-        </li>
-        <li>
-            <a href="https://instagram.com/" title="Instagram - Dupa Harum RK">
-                <img src="images/logo-instagram.jpg" width="30" alt="Logo Instagram">
-                Instagram - Dupa Harum RK
-            </a>
-        <li>
-            <a href="https://twitter.com/" title="Twitter - Dupa Harum RK">
-                <img src="images/logo-twitter.png" width="30" alt="Logo Twitter">
-                Twitter - Dupa Harum RK
-            </a>
-        </li>
-    </ul>
-    </div>
-    <!-- End Menu Sekunder -->
-
     <!-- Start Copyright -->
     <div class="container">
-    <p>Copyright &copy; 2019 - Radha Krishna</p>
+        <p>Copyright &copy; 2019 - Radha Krishna</p>
     </div>
     <!-- End Copyright -->
 </body>
