--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- End Title -->
 
     <!-- Start Description -->
-    <meta type="description" content="Selamat datang di Toko Dupa Sridana, jual dupa harum dengan aneka aroma, khusus dupa import, perlengkapan sembahyang dan juga aksesoris spiritual. Melayani pengiriman ke seluruh wilayah Indonesia.">
+    <meta type="description" content="Selamat datang di Dupa Harum Radha Krishna, menjual dupa harum dengan aneka aroma, khusus dupa import dengan abu dingin dan full celup, perlengkapan sembahyang dan juga aksesoris spiritual. Melayani pengiriman ke seluruh wilayah Indonesia.">
 
     <!-- End Description -->
 
@@ -70,16 +70,16 @@
     <!-- Start Jumbroton -->
     <div class="container jumbroton">
         <h1>Selamat Datang di Dupa Radha Krishna</h1>
-        <h3>Dupa Harum Radha Krishna menyediakan dupa harum berkualitas dengan harga terjangkau</h3>
+        <h3>Dupa Harum Radha Krishna menyediakan dupa harum berkualitas dengan berbagai aroma dengan abu dingin dan full celup dan harga terjangkau</h3>
     </div>
     <!-- End Jumbroton -->
 
     <!-- Start Foto -->
     <div class="container">
         <figure class="snip1585">
-            <img src="images/dupa-bambu-a.jpg" width="230" alt="sample70" />
+            <img src="images/dupa-bambu-a.jpg" width="230" alt="sample70"/>
             <figcaption>
-                <h3>Dupa Bambu</h3>
+                <h3>Dupa RK Bambu</h3>
             </figcaption>
             <a href="#"></a>
         </figure>
@@ -166,10 +166,10 @@
                 <div class="box-isi">
                     <ol>                                                          
                         <li>
-                            <a href="artikel.html" title="Cara mudah, murah membuat website">Cara mudah, murah membuat website</a>
+                            <a href="artikel.html" title="Dupa sebagai sarana sembahyang">Dupa sebagai sarana sembahyang</a>
                         </li>
                         <li>
-                            <a href="artikel.html" title="Cara membuat website yang UI-nya cantik dan UX-nya baik">Cara membuat website yang UI-nya cantik dan UX-nya baik</a> 
+                            <a href="artikel.html" title="Balance your Life">Balance your Life</a> 
                         </li>
                         <li>
                             <a href="artikel.html" title="Tips dan trik menarik pengunjung">Tips dan trik menarik pengunjung</a>
@@ -186,7 +186,7 @@
                 <div class="box-isi">
                     <blockquote>
                         <p>                                                                     
-                            <em>Awalnya saya skeptis memakai jasa Coding Design, ternyata hasilnya sangat berkualitas. Saya puas!</em>
+                            <em>Awalnya sekedar mencoba saja tetapi setelah dicoba ternyata dupanya memang berkualitas dan harum!</em>
                         </p>                                                                        
                     <cite>-- Klien</cite>
                 </blockquote>
@@ -200,8 +200,8 @@
     <!-- Start Menu Sekunder -->
     <div class="container-full bg-rgb">
         <div class="container col-30">
-            <h2>Dupa Harum RK</h2 >
-            <p>Dupa Harum RK menyediakan produk dupa harum yang terjangkau dan berkualitas.</p>
+            <h2>Hubungi Kami :</h2 >
+            <p>Alamat : Jl. Permata Gatsu II Perum Oma Asri B5 Ubung Denpasar Bali</p>
             <p>Email: <a href="mailto:admin@dupaharum.com" title="admin@dupaharum.com">admin@dupaharum.com</a></p>
             <p>WA: <a href="tel:+62-8123-814046" title="+62-8123-814046">+62-8123-814046</a></p>
 
@@ -216,9 +216,9 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://instagram.com/" title="Instagram - Dupa Harum RK">
+                    <a href="https://instagram.com/" title="Instagram - radha_krishna_dupa">
                         <img src="images/logo-instagram.jpg" width="30" alt="Logo Instagram">
-                        Instagram - Dupa Harum RK
+                        Instagram - radha_krishna_dupa
                     </a>
                 <li>
                     <a href="https://twitter.com/" title="Twitter - Dupa Harum RK">
