--- a/kontak.html
+++ b/kontak.html
@@ -11,7 +11,7 @@
     <!-- End Title -->
 
     <!-- Start Description -->
-    <meta type="description" content="Selamat datang di Toko Dupa Sridana, jual dupa harum dengan aneka aroma, khusus dupa import, perlengkapan sembahyang dan juga aksesoris spiritual. Melayani pengiriman ke seluruh wilayah Indonesia.">
+    <meta type="description" content="Selamat datang di Toko Dupa Radha Krishna, jual dupa harum dengan aneka aroma, khusus dupa import, perlengkapan sembahyang dan juga aksesoris spiritual. Melayani pengiriman ke seluruh wilayah Indonesia.">
 
     <!-- End Description -->
 
@@ -70,7 +70,7 @@
     <!-- Start Jumbroton -->
     <div class="container">
         <!-- Start Alamat -->
-        <h2>Alamat Radha Krishna</h2>
+        <h2>Alamat Dupa Harum Radha Krishna</h2>
         <p>Anda bisa pesan dan konfirmasi pembayaran melalui WA atau Email dibawah ini :</p>
         <ul>
             <li>Email: <a href="mailto:admin@dupaharum.com" title="admin@dupaharum.com">admin@dupaharum.com</a></li>
@@ -79,7 +79,7 @@
         <!-- End Alamat -->
 
         <!-- Start Form -->
-        <h2>Form Kontak Radha Krishna</h2>
+        <h2>Form Order Dupa Harum Radha Krishna</h2>
         <p>Anda bisa pesan dan konfirmasi pembayaran melalui Form di bawah ini:</p>
 
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfl1pmvS1yQetnpZ4iIp2gG4FTllDEcaITv84Dx_vTdozPpFA/viewform?embedded=true" width="640" height="1885" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
@@ -115,35 +115,35 @@
     <!-- Start Menu Sekunder -->
     <div class="container-full bg-rgb">
         <div class="container col-30">
-            <h2>Dupa Harum RK</h2 >
-            <p>Dupa Harum RK menyediakan produk dupa harum yang terjangkau dan berkualitas.</p>
-            <p>Email: <a href="mailto:admin@dupaharum.com" title="admin@dupaharum.com">admin@dupaharum.com</a></p>
-            <p>WA: <a href="tel:+62-8123-814046" title="+62-8123-814046">+62-8123-814046</a></p>
-
-        </div>
-        <div class="container col-30">
-            <h2>Media Sosial</h2>
-            <ul>
-                <li>
-                    <a href="https://facebook.com/" title="Facebook - Dupa Harum RK">
-                        <img src="images/logo-facebook.png" width="30" alt="Logo Facebook">
-                        Facebook - Dupa Harum RK
-                    </a>
-                </li>
-                <li>
-                    <a href="https://instagram.com/" title="Instagram - Dupa Harum RK">
-                        <img src="images/logo-instagram.jpg" width="30" alt="Logo Instagram">
-                        Instagram - Dupa Harum RK
-                    </a>
-                <li>
-                    <a href="https://twitter.com/" title="Twitter - Dupa Harum RK">
-                        <img src="images/logo-twitter.png" width="30" alt="Logo Twitter">
-                        Twitter - Dupa Harum RK
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <!-- End Menu Sekunder -->
+            <h2>Hubungi Kami :</h2 >
+                <p>Alamat : Jl. Permata Gatsu II Perum Oma Asri B5 Ubung Denpasar Bali</p>
+                <p>Email: <a href="mailto:admin@dupaharum.com" title="admin@dupaharum.com">admin@dupaharum.com</a></p>
+                <p>WA: <a href="tel:+62-8123-814046" title="+62-8123-814046">+62-8123-814046</a></p>
+    
+            </div>
+            <div class="container col-30">
+                <h2>Media Sosial</h2>
+                <ul>
+                    <li>
+                        <a href="https://facebook.com/" title="Facebook - Dupa Harum RK">
+                            <img src="images/logo-facebook.png" width="30" alt="Logo Facebook">
+                            Facebook - Dupa Harum RK
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://instagram.com/" title="Instagram - radha_krishna_dupa">
+                            <img src="images/logo-instagram.jpg" width="30" alt="Logo Instagram">
+                            Instagram - radha_krishna_dupa
+                        </a>
+                    <li>
+                        <a href="https://twitter.com/" title="Twitter - Dupa Harum RK">
+                            <img src="images/logo-twitter.png" width="30" alt="Logo Twitter">
+                            Twitter - Dupa Harum RK
+                        </a>
+                    </li>
+                </ul>
+            </div>
+    <!-- End Menu Sekunder -->
     </div>
     <!-- Start Copyright -->
     <div class="container">
