--- a/pembayaran.html
+++ b/pembayaran.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     
     <!-- Start Title -->
-    <title>Jasa Web Design Terjangkau dan Berkualitas - Coding Design - Beranda</title>
+    <title>Dupa Harum Radha Krishna - Dupa Abu Dingin Full Celup - Beranda</title>
     <!-- End Title -->
 
     <!-- Start Description -->
-    <meta type="description" content="Coding Design memberikan layanan terjangkau dan berkualitas.">
+    <meta type="description" content="Dupa Harum Radha Krishna menyediakan berbagai jenis dupa berkualitas dengan harga terjangkau.">
     <!-- End Description -->
 
     <!-- Start CSS -->
@@ -56,38 +56,38 @@
 
     <div class="container">
         <!-- Start Jumbroton -->
-        <h1>Cara Pembayaran Coding Design</h1>
-        <h3>Coding Design menyediakan layanan yang terjangkau dan berkualitas</h3>
+        <h1>Cara Pembayaran</h1>
+        <h3>Cara Pembayaran dapat dilakukan melalui transfer rekening atau tunai</h3>
         <!-- End Jumbroton -->
     </div>
 
     <!-- Start Menu Sekunder -->
     <div class="container-full bg-rgb">
         <div class="container col-30">
-            <h2>Dupa Harum RK</h2 >
-            <p>Dupa Harum RK menyediakan produk dupa harum yang terjangkau dan berkualitas.</p>
-            <p>Email: <a href="mailto:admin@dupaharum.com" title="admin@dupaharum.com">admin@dupaharum.com</a></p>
-            <p>WA: <a href="tel:+62-8123-814046" title="+62-8123-814046">+62-8123-814046</a></p>
-
-        </div>
-        <div class="container col-30">
-            <h2>Media Sosial</h2>
-            <ul>
-                <li>
-                    <a href="https://facebook.com/" title="Facebook - Dupa Harum RK">
-                        <img src="images/logo-facebook.png" width="30" alt="Logo Facebook">
-                        Facebook - Dupa Harum RK
-                    </a>
-                </li>
-                <li>
-                    <a href="https://instagram.com/" title="Instagram - Dupa Harum RK">
-                        <img src="images/logo-instagram.jpg" width="30" alt="Logo Instagram">
-                        Instagram - Dupa Harum RK
-                    </a>
-                <li>
-                    <a href="https://twitter.com/" title="Twitter - Dupa Harum RK">
-                        <img src="images/logo-twitter.png" width="30" alt="Logo Twitter">
-                        Twitter - Dupa Harum RK
+            <h2>Hubungi Kami :</h2 >
+                <p>Alamat : Jl. Permata Gatsu II Perum Oma Asri B5 Ubung Denpasar Bali</p>
+                <p>Email: <a href="mailto:admin@dupaharum.com" title="admin@dupaharum.com">admin@dupaharum.com</a></p>
+                <p>WA: <a href="tel:+62-8123-814046" title="+62-8123-814046">+62-8123-814046</a></p>
+    
+            </div>
+            <div class="container col-30">
+                <h2>Media Sosial</h2>
+                <ul>
+                    <li>
+                        <a href="https://facebook.com/" title="Facebook - Dupa Harum RK">
+                            <img src="images/logo-facebook.png" width="30" alt="Logo Facebook">
+                            Facebook - Dupa Harum RK
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://instagram.com/" title="Instagram - radha_krishna_dupa">
+                            <img src="images/logo-instagram.jpg" width="30" alt="Logo Instagram">
+                            Instagram - radha_krishna_dupa
+                        </a>
+                    <li>
+                        <a href="https://twitter.com/" title="Twitter - Dupa Harum RK">
+                            <img src="images/logo-twitter.png" width="30" alt="Logo Twitter">
+                            Twitter - Dupa Harum RK
                     </a>
                 </li>
             </ul>
