--- a/produk.html
+++ b/produk.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     
     <!-- Start Title -->
-    <title>Jasa Web Design Terjangkau dan Berkualitas - Coding Design - Beranda</title>
+    <title>Produk Kami - Beranda</title>
     <!-- End Title -->
 
     <!-- Start Description -->
-    <meta type="description" content="Coding Design memberikan layanan terjangkau dan berkualitas.">
+    <meta type="description" content="Selamat datang di Dupa Harum Radha Krishna, menjual dupa harum dengan aneka aroma, khusus dupa import dengan abu dingin dan full celup, perlengkapan sembahyang dan juga aksesoris spiritual. Melayani pengiriman ke seluruh wilayah Indonesia.">
+
     <!-- End Description -->
 
     <!-- Start CSS -->
@@ -56,62 +57,65 @@
 
     <div class="container">
         <!-- Start Jumbroton -->
-        <h1>Layanan Coding Design</h1>
-        <h3>Coding Design menyediakan layanan yang terjangkau dan berkualitas</h3>
+        <h1>Produk Kami</h1>
+        <h3>Berikut adalah produk-produk Dupa Harum Radha Krishna :</h3>
         <!-- End Jumbroton -->
 
-        <!-- Start Layanan -->
-        <table border="1">
-            <thead>
-                <tr>
-                    <td>Layanan</td>
-                    <td>Paket A</td>
-                    <td>Paket B</td>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Logo Design</td>
-                    <td>Y</td>
-                    <td>Y</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <!-- End Layanan -->
+        <figure class="snip1583">
+                <img src="images/dupapepeljempiring.jpg" alt="sample68" />
+                <div class="icons"><a><i class="ion-android-cart"></i></a><a><i class="ion-android-star"></i></a><a><i class="ion-android-share-alt"></i></a></div>
+                <figcaption>
+                  <h3>Dupa Bulat Aroma Jempiring 1/5 Kg</h3>
+                  <div class="price">IDR 20.000</div>
+                </figcaption>
+              </figure>
+              <figure class="snip1583 hover"><img src="images/dupajempiring.jpg" alt="sample77" />
+                <div class="icons"><a><i class="ion-android-cart"></i></a><a><i class="ion-android-star"></i></a><a><i class="ion-android-share-alt"></i></a></div>
+                <figcaption>
+                  <h3>Dupa Pepel 250 gram</figcaption></figure</h3>
+                  <div class="price">IDR 12.000</div>
+                </figcaption>
+              </figure>
+              <figure class="snip1583"><img src="images/dupajempiring-a.jpg" alt="sample71" />
+                <div class="icons"><a><i class="ion-android-cart"></i></a><a><i class="ion-android-star"></i></a><a><i class="ion-android-share-alt"></i></a></div>
+                <figcaption>
+                  <h3>Dupa Pepel 100 gram</h3>
+                  <div class="price">IDR 5.000</div>
+                </figcaption>
+              </figure>
     </div>
 
     <!-- Start Menu Sekunder -->
     <div class="container-full bg-rgb">
         <div class="container col-30">
-            <h2>Dupa Harum RK</h2 >
-            <p>Dupa Harum RK menyediakan produk dupa harum yang terjangkau dan berkualitas.</p>
-            <p>Email: <a href="mailto:admin@dupaharum.com" title="admin@dupaharum.com">admin@dupaharum.com</a></p>
-            <p>WA: <a href="tel:+62-8123-814046" title="+62-8123-814046">+62-8123-814046</a></p>
-
-        </div>
-        <div class="container col-30">
-            <h2>Media Sosial</h2>
-            <ul>
-                <li>
-                    <a href="https://facebook.com/" title="Facebook - Dupa Harum RK">
-                        <img src="images/logo-facebook.png" width="30" alt="Logo Facebook">
-                        Facebook - Dupa Harum RK
-                    </a>
-                </li>
-                <li>
-                    <a href="https://instagram.com/" title="Instagram - Dupa Harum RK">
-                        <img src="images/logo-instagram.jpg" width="30" alt="Logo Instagram">
-                        Instagram - Dupa Harum RK
-                    </a>
-                <li>
-                    <a href="https://twitter.com/" title="Twitter - Dupa Harum RK">
-                        <img src="images/logo-twitter.png" width="30" alt="Logo Twitter">
-                        Twitter - Dupa Harum RK
-                    </a>
-                </li>
-            </ul>
-        </div>
+            <h2>Hubungi Kami :</h2 >
+                <p>Alamat : Jl. Permata Gatsu II Perum Oma Asri B5 Ubung Denpasar Bali</p>
+                <p>Email: <a href="mailto:admin@dupaharum.com" title="admin@dupaharum.com">admin@dupaharum.com</a></p>
+                <p>WA: <a href="tel:+62-8123-814046" title="+62-8123-814046">+62-8123-814046</a></p>
+    
+            </div>
+            <div class="container col-30">
+                <h2>Media Sosial</h2>
+                <ul>
+                    <li>
+                        <a href="https://facebook.com/" title="Facebook - Dupa Harum RK">
+                            <img src="images/logo-facebook.png" width="30" alt="Logo Facebook">
+                            Facebook - Dupa Harum RK
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://instagram.com/" title="Instagram - radha_krishna_dupa">
+                            <img src="images/logo-instagram.jpg" width="30" alt="Logo Instagram">
+                            Instagram - radha_krishna_dupa
+                        </a>
+                    <li>
+                        <a href="https://twitter.com/" title="Twitter - Dupa Harum RK">
+                            <img src="images/logo-twitter.png" width="30" alt="Logo Twitter">
+                            Twitter - Dupa Harum RK
+                        </a>
+                    </li>
+                </ul>
+            </div>
         <!-- End Menu Sekunder -->
     </div>
     <!-- Start Copyright -->
